--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "universal-vault-v4",
+  "name": "FabledVault",
   "version": "4.0.0",
   "description": "Agent-agnostic credential management for any AI agent, schema, or system",
   "type": "module",
@@ -69,7 +69,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/flint/universal-vault-v4.git"
+    "url": "git+https://github.com/flint/FabledVault.git"
   },
   "funding": {
     "type": "github",
