--- a/package.json
+++ b/package.json
@@ -38,31 +38,31 @@
   "author": "Flint <flint@hearth.dev>",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^1.0.0",
-    "fastify": "^5.7.4",
     "@fastify/websocket": "^11.0.0",
+    "@modelcontextprotocol/sdk": "^1.26.0",
+    "argon2": "^0.44.0",
+    "better-sqlite3": "^11.10.0",
+    "commander": "^12.0.0",
+    "dotenv": "^16.4.0",
+    "fastify": "^5.7.4",
     "graphql": "^16.8.0",
     "mercurius": "^16.7.0",
-    "better-sqlite3": "^11.0.0",
-    "argon2": "^0.44.0",
-    "sodium-native": "^5.0.10",
-    "commander": "^12.0.0",
-    "zod": "^3.23.0",
     "nanoid": "^5.0.0",
     "pino": "^9.0.0",
-    "dotenv": "^16.4.0"
+    "sodium-native": "^5.0.10",
+    "zod": "^3.23.0"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.0",
     "@types/node": "^22.0.0",
-    "typescript": "^5.5.0",
-    "tsx": "^4.19.0",
-    "vitest": "^2.0.0",
-    "@vitest/coverage-v8": "^2.0.0",
-    "eslint": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "prettier": "^3.3.0"
+    "@vitest/coverage-v8": "^2.0.0",
+    "eslint": "^9.0.0",
+    "prettier": "^3.3.0",
+    "tsx": "^4.19.0",
+    "typescript": "^5.5.0",
+    "vitest": "^2.0.0"
   },
   "engines": {
     "node": ">=20.0.0"
