--- a/package.json
+++ b/package.json
@@ -42,17 +42,19 @@
     "@modelcontextprotocol/sdk": "^1.26.0",
     "argon2": "^0.44.0",
     "better-sqlite3": "^11.10.0",
-    "commander": "^12.0.0",
+    "commander": "^12.1.0",
     "dotenv": "^16.4.0",
     "fastify": "^5.7.4",
     "graphql": "^16.8.0",
     "mercurius": "^16.7.0",
     "nanoid": "^5.0.0",
     "pino": "^9.0.0",
+    "playwright": "^1.58.2",
     "sodium-native": "^5.0.10",
-    "zod": "^3.23.0"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
+    "@playwright/test": "^1.58.2",
     "@types/better-sqlite3": "^7.6.0",
     "@types/node": "^22.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
